--- a/CV.Rmd
+++ b/CV.Rmd
@@ -26,7 +26,7 @@ urlcolor: blue
 
 # Employment
 
-*UCLA Center for Health Policy Research*, Assistatnt Statistician \hfill 2015-2017
+*UCLA Center for Health Policy Research*, Assistant Statistician \hfill 2015-2017
 
 *Conference on World Affairs*, Student Assistant \hfill 2013-2014
 
